fix the icon and the pin to be aligned

--- a/www/css/map.css
+++ b/www/css/map.css
@@ -14,7 +14,6 @@ body {padding-top: 50px; }
 	position: relative;
 	height:175px;
 	width:100%;
-	margin-top: 5px;
 	}
 
 .mapSelect:before, .mapSelect:after {
